prod/external-services.yml
apiVersion: v1
kind: Service
metadata:
  name: test-httpd
  namespace: production
spec:
  type: ExternalName
  externalName: test-httpd.test-httpd.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: production
spec:
  type: ExternalName
  externalName: registry.registry.svc.cluster.local
